threadcity/build_errors.txt
    Updating crates.io index
     Locking 6 packages to latest compatible versions
      Adding getrandom v0.2.16
      Adding rand v0.8.5 (available: v0.9.2)
      Adding rand_chacha v0.3.1
      Adding rand_core v0.6.4
 Downgrading rand_distr v0.5.1 -> v0.4.3 (available: v0.5.1)
      Adding wasi v0.11.1+wasi-snapshot-preview1
 Downloading crates ...
  Downloaded rand_distr v0.4.3
   Compiling getrandom v0.2.16
   Compiling mypthreads v0.1.0 (/home/sarahpqc/Proyecto1_SO_fixed/mypthreads)
error[E0428]: the name `run_simulation` is defined multiple times
   --> mypthreads/src/mypthreads_api.rs:120:1
    |
115 | pub fn run_simulation(cycles: usize) {
    | ------------------------------------ previous definition of the value `run_simulation` here
...
120 | pub fn run_simulation(cycles: usize) {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `run_simulation` redefined here
    |
    = note: `run_simulation` must be defined only once in the value namespace of this module

warning: unused import: `ThreadState`
 --> mypthreads/src/mypthreads_api.rs:6:46
  |
6 | use crate::thread::{SchedulerType, ThreadId, ThreadState};
  |                                              ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

   Compiling rand_core v0.6.4
error[E0616]: field `now_ms` of struct `ThreadRuntimeV2` is private
   --> mypthreads/src/mypthreads_api.rs:126:29
    |
126 |     RUNTIME.lock().unwrap().now_ms
    |                             ^^^^^^ private field

Some errors have detailed explanations: E0428, E0616.
For more information about an error, try `rustc --explain E0428`.
warning: `mypthreads` (lib) generated 1 warning
error: could not compile `mypthreads` (lib) due to 2 previous errors; 1 warning emitted
warning: build failed, waiting for other jobs to finish...
